compiler/testData/diagnostics/testsWithStdLib/coroutines/suspendFunctionN12.kt
// !LANGUAGE: +Coroutines
// SKIP_TXT

import kotlin.coroutines.*

fun test() {
    suspend {} is <!UNRESOLVED_REFERENCE!>SuspendFunction0<!><*>
}
